--- a/eap7/echo-websocket/pom.xml
+++ b/eap7/echo-websocket/pom.xml
@@ -170,7 +170,8 @@
                         <version>${version.war.plugin}</version>
                         <configuration>
                             <outputDirectory>deployments</outputDirectory>
-                            <warName>ROOT</warName>
+                            <!-- Not Deploying as ROOT.war, in order to make easier to test it locally  -->
+                            <!--  <warName>ROOT</warName>-->
                             <!-- Java EE doesn't require web.xml, Maven needs to catch up! -->
                             <failOnMissingWebXml>false</failOnMissingWebXml>
                         </configuration>
