--- a/allInOne/huge-app/pom.xml
+++ b/allInOne/huge-app/pom.xml
@@ -200,7 +200,11 @@
 	    	<artifactId>camel-freemarker</artifactId>
 	    	<version>2.15.1.redhat-621084</version>
 		 </dependency>
-		
+		 <dependency>
+		  <groupId>org.apache.camel</groupId>
+		  <artifactId>camel-xstream</artifactId>
+		  <version>2.9.2</version>
+		</dependency>
     </dependencies>
 
     <build>
