--- a/camel/soap2rest/pom.xml
+++ b/camel/soap2rest/pom.xml
@@ -192,7 +192,11 @@
      	<groupId>org.apache.cxf</groupId>
      	<artifactId>cxf-rt-transports-http-jetty</artifactId>
      </dependency>
-  
+	 <dependency>
+	  <groupId>org.apache.camel</groupId>
+	  <artifactId>camel-xstream</artifactId>
+	  <version>2.9.2</version>
+	</dependency>
   </dependencies>
 
 
