--- a/camel/soap2rest/pom.xml
+++ b/camel/soap2rest/pom.xml
@@ -133,6 +133,7 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
+      <version>2.18.0</version>
     </dependency>
 
     <dependency>
@@ -197,6 +198,18 @@
 	  <artifactId>camel-xstream</artifactId>
 	  <version>2.9.2</version>
 	</dependency>
+	
+	<dependency>
+    	<groupId>org.apache.camel</groupId>
+    	<artifactId>camel-hystrix</artifactId>
+    	<version>2.18.0</version>
+	</dependency>
+	<dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-hystrix-starter</artifactId>
+      	<version>2.18.0</version>
+	</dependency>
+	
   </dependencies>
 
 
