--- a/eap7/offers-ha/pom.xml
+++ b/eap7/offers-ha/pom.xml
@@ -115,6 +115,7 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
+            <version>1.2</version>
         </dependency>
         
         <!-- Import the Common Annotations API (JSR-250), we use provided scope
@@ -123,6 +124,7 @@
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.2_spec</artifactId>
             <scope>provided</scope>
+            <version>1.0.0.Final</version>
         </dependency>
 
         <!-- Import the JAX-RS API, we use provided scope as the API is included in JBoss EAP -->
@@ -130,11 +132,13 @@
             <groupId>org.jboss.spec.javax.ws.rs</groupId>
             <artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
             <scope>provided</scope>
+            <version>1.0.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.1_spec</artifactId>
             <scope>provided</scope>
+            <version>1.0.0.Final</version>
         </dependency>
     
     </dependencies>
