--- a/eap7/offers-ha/pom.xml
+++ b/eap7/offers-ha/pom.xml
@@ -147,7 +147,7 @@
         <!-- Set the name of the WAR, used as the context root when the app
             is deployed -->
         <!--<finalName>${project.artifactId}</finalName>-->
-        <finalName>ha</finalName>
+        <finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
